--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>FamilyGardens</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
@@ -26,6 +27,8 @@
 
     <!-- Theme CSS -->
     <link href="css/new-age.min.css" rel="stylesheet">
+    <link href="css/familygardens.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,20 +48,29 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">FamilyGardens</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#gardenbox">GardenBox&trade;</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#features">Features</a>
+                        <a class="page-scroll" href="#learn">Learn</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#grow">Grow</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#harvest">Harvest</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#pricing">Pricing</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#buy">Buy</a>
                     </li>
                 </ul>
             </div>
@@ -73,8 +85,8 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+                            <h1>FamilyGardens is the <a href="https://www.blueapron.com/" target="_blank">BlueApron</a> for gardening</h1>
+                            <a href="#gardenbox" class="btn btn-outline btn-xl page-scroll">See How</a>
                         </div>
                     </div>
                 </div>
@@ -101,75 +113,117 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
-                    <div class="badges">
-                        <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                        <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                    <h2 class="section-heading">Keep your family growing</h2>
+                    <p>Family Gardens keeps your family engaged with your garden by giving you the supplies to make your garden thrive —so you always have what ’s needed to keep your garden bountiful.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="gardenbox" class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>GardenBox&trade; System</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="feature-item">
+                                    <i class="icon-check text-primary"></i>
+                                    <h3>Tell us your preferences</h3>
+                                    <p class="text-muted">We customize each box to fit you.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="feature-item">
+                                    <i class="icon-present text-primary"></i>
+                                    <h3>Receive your GardenBox&trade;</h3>
+                                    <p class="text-muted">We ship you all the supplies you need.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="feature-item">
+                                    <i class="glyphicon glyphicon-leaf text-primary"></i>
+                                    <h3>Grow your garden</h3>
+                                    <p class="text-muted">Enjoy growing with family and friends.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="features" class="features">
+    <section id="learn" class="features">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <h2>Easy & Fun</h2>
                         <hr>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait white">
-                            <div class="device">
-                                <div class="screen">
-                                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
-                                <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                                </div>
-                            </div>
-                        </div>
+                    <img src="img/strawberry.png" class="img-responsive" alt="Responsive image">
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-item">
+                        <i class="glyphicon glyphicon-grain text-primary"></i>
+                        <h3>Everything Included</h3>
+                        <p class="text-muted">You get all the supplies to make your garden a success.</p>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-4">
+                    <div class="feature-item">
+                        <i class="glyphicon glyphicon-list-alt text-primary"></i>
+                        <h3>Super Simple</h3>
+                        <p class="text-muted">Every GardenBox&trade; comes with easy to understand directions.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="grow" class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Grow Food & Family</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                    <i class="glyphicon glyphicon-tree-deciduous text-primary"></i>
+                                    <h3>Core Values</h3>
+                                    <p class="text-muted">Teach the value of gardening and know where food comes from</p>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                    <i class="glyphicon glyphicon-heart text-primary"></i>
+                                    <h3>Family Fun</h3>
+                                    <p class="text-muted">Spend more time with your family, doing things that really matter</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                                </div>
+                            <div class="col-md-4">
+                                <img src="img/mom-daughter-garden.jpg" class="img-responsive img-rounded">
                             </div>
                         </div>
                     </div>
@@ -178,36 +232,113 @@
         </div>
     </section>
 
-    <section class="cta">
-        <div class="cta-content">
-            <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+    <section id="harvest" class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Harvest Healthy Surprises</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                  <img src="img/recipe.png" class="img-responsive" alt="Responsive image">
+              </div>
+              <div class="col-md-4">
+                  <div class="feature-item">
+                      <i class="fa fa-shopping-basket text-primary"></i>
+                      <h3>Bountiful Baskets</h3>
+                      <p class="text-muted">You'll harvest more than you ever thought possible</p>
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="feature-item">
+                      <i class="glyphicon glyphicon-cutlery text-primary"></i>
+                      <h3>Healthy Options</h3>
+                      <p class="text-muted">We provide tasty and healthy recipe options</p>
+                  </div>
+              </div>
+
             </div>
         </div>
-        <div class="overlay"></div>
     </section>
 
-    <section id="contact" class="contact bg-primary">
-        <div class="container">
-            <h2>We <i class="fa fa-heart"></i> new friends!</h2>
-            <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                </li>
-            </ul>
+    <section id="pricing" class="features">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-7">
+                  <div class="header-content">
+                      <div class="header-content-inner">
+                          <h1>The GardenBox&trade; Subscription</h1>
+                          <h2>$10/month</h2>
+                          <ul>
+                            <li>1 GardenBox&trade; / month</li>
+                            <li>Easy Instructions</li>
+                            <li>Plant Cuttings</li>
+                            <li>Fertalizer</li>
+                            <li>Nutrients</li>
+                          <ul>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-sm-5">
+                  <div class="device-container">
+                      <div class="device-mockup iphone6_plus portrait white">
+                          <div class="device">
+                              <div class="screen">
+                                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                                  <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+                              </div>
+                              <div class="button">
+                                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </section>
+
+    <section id="buy" class="features">
+      <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <div class="section-heading">
+                    <h2 id='option-question'>What is your experience level?</h2>
+                    <hr>
+                </div>
+            </div>
         </div>
+        <div id='option-button-row' class="row text-center">
+          <button id="option-button-1" class="btn btn-default btn-lg option-button">Beginner</button>
+          <button id="option-button-2" class="btn btn-default btn-lg option-button">Advanced</button>
+          <button id="option-button-3" class="btn btn-default btn-lg option-button">Master</button>
+        </div>
+        <div id='suggestion-row'class="row hidden">
+            <div class="col-md-12">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <div class="feature-item">
+                                <i class="icon-present text-primary"></i>
+                                <h3 id='suggestion-label'>Receive your GardenBox&trade;</h3>
+                                <button class="btn btn-success btn-xl btn-block page-scroll">Order Now</button>
+                                <button class="btn btn-default btn-xl btn-block page-scroll option-button-reset">Reset</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
+            <p>&copy; 2017 FamilyGardens. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li>
                     <a href="#">Privacy</a>
@@ -230,9 +361,11 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/new-age.min.js"></script>
+    <script src="js/engine.js"></script>
 
 </body>
 
