--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
                                 <div class="feature-item">
                                     <i class="glyphicon glyphicon-tree-deciduous text-primary"></i>
                                     <h3>Core Values</h3>
-                                    <p class="text-muted">Teach the value of gardening and know where food comes from</p>
+                                    <p class="text-muted">Teach the value of gardening and know where food comes from.</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="feature-item">
                                     <i class="glyphicon glyphicon-heart text-primary"></i>
                                     <h3>Family Fun</h3>
-                                    <p class="text-muted">Spend more time with your family, doing things that really matter</p>
+                                    <p class="text-muted">Spend more time with family, doing things that really matter.</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -250,14 +250,14 @@
                   <div class="feature-item">
                       <i class="fa fa-shopping-basket text-primary"></i>
                       <h3>Bountiful Baskets</h3>
-                      <p class="text-muted">You'll harvest more than you ever thought possible</p>
+                      <p class="text-muted">You'll harvest more than you ever thought possible.</p>
                   </div>
               </div>
               <div class="col-md-4">
                   <div class="feature-item">
                       <i class="glyphicon glyphicon-cutlery text-primary"></i>
                       <h3>Healthy Options</h3>
-                      <p class="text-muted">We provide tasty and healthy recipe options</p>
+                      <p class="text-muted">We provide tasty and healthy recipe options.</p>
                   </div>
               </div>
 
@@ -267,6 +267,14 @@
 
     <section id="pricing" class="features">
       <div class="container">
+          <div class="row">
+              <div class="col-lg-12 text-center">
+                  <div class="section-heading">
+                      <h2>Pricing</h2>
+                      <hr>
+                  </div>
+              </div>
+          </div>
           <div class="row">
               <div class="col-sm-7">
                   <div class="header-content">
@@ -284,19 +292,7 @@
                   </div>
               </div>
               <div class="col-sm-5">
-                  <div class="device-container">
-                      <div class="device-mockup iphone6_plus portrait white">
-                          <div class="device">
-                              <div class="screen">
-                                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                  <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
-                              </div>
-                              <div class="button">
-                                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                  <img src="img/gardenbox-2.jpg" class="img-responsive">
               </div>
           </div>
       </div>
