Adds our sponsors and community links

--- a/index.html
+++ b/index.html
@@ -337,13 +337,10 @@
             <p>&copy; 2017 FamilyGardens. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li>
-                    <a href="#">Privacy</a>
+                    <a href="http://www.apps-for-ag.com/sponsors/" target="_blank">Sponsors</a>
                 </li>
                 <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
+                    <a href="http://givinggarden.io/" target="_blank">Community</a>
                 </li>
             </ul>
         </div>
