Adds nice garden box photo

--- a/index.html
+++ b/index.html
@@ -272,28 +272,45 @@
                   <div class="section-heading">
                       <h2>Pricing</h2>
                       <hr>
+                      <h1>The GardenBox&trade; Subscription</h1>
+                      <h2>$10/month</h2>
                   </div>
               </div>
           </div>
           <div class="row">
-              <div class="col-sm-7">
-                  <div class="header-content">
-                      <div class="header-content-inner">
-                          <h1>The GardenBox&trade; Subscription</h1>
-                          <h2>$10/month</h2>
-                          <ul>
-                            <li>1 GardenBox&trade; / month</li>
-                            <li>Easy Instructions</li>
-                            <li>Plant Cuttings</li>
-                            <li>Fertalizer</li>
-                            <li>Nutrients</li>
-                          <ul>
-                      </div>
-                  </div>
+            <div class="col-sm-8">
+              <div class="row">
+                <div class="col-md-6">
+                    <div class="feature-item">
+                        <i class="glyphicon glyphicon-list-alt text-primary"></i>
+                        <h3>Easy Instructions</h3>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="feature-item">
+                        <i class="glyphicon glyphicon-leaf text-primary"></i>
+                        <h3>Plant Cuttings</h3>
+                    </div>
+                </div>
               </div>
-              <div class="col-sm-5">
-                  <img src="img/gardenbox-2.jpg" class="img-responsive">
+              <div class="row">
+                <div class="col-md-6">
+                    <div class="feature-item">
+                        <i class="glyphicon glyphicon-tree-conifer text-primary"></i>
+                        <h3>Fertalizer</h3>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="feature-item">
+                        <i class="glyphicon glyphicon-apple text-primary"></i>
+                        <h3>Nutrients</h3>
+                    </div>
+                </div>
               </div>
+            </div>
+            <div class="col-sm-4">
+                <img src="img/gardenbox-3.jpg" class="img-responsive">
+            </div>
           </div>
       </div>
     </section>
@@ -341,6 +358,9 @@
                 </li>
                 <li>
                     <a href="http://givinggarden.io/" target="_blank">Community</a>
+                </li>
+                <li>
+                    <a href="https://github.com/BlackrockDigital/startbootstrap-new-age" target="_blank">Theme</a>
                 </li>
             </ul>
         </div>
