Adds some minor text changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>FamilyGardens is the <a href="https://www.blueapron.com/" target="_blank">BlueApron</a> for gardening</h1>
+                            <h1>FamilyGardens is a custom curated garden delivery service</h1>
                             <a href="#gardenbox" class="btn btn-outline btn-xl page-scroll">See How</a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>GardenBox&trade; System</h2>
+                        <h2>GardenBox&trade; Process</h2>
                         <hr>
                     </div>
                 </div>
@@ -270,10 +270,9 @@
           <div class="row">
               <div class="col-lg-12 text-center">
                   <div class="section-heading">
-                      <h2>Pricing</h2>
+                      <h2>GardenBox&trade; Subscription</h2>
+                      <h2>$20/month</h2>
                       <hr>
-                      <h1>The GardenBox&trade; Subscription</h1>
-                      <h2>$10/month</h2>
                   </div>
               </div>
           </div>
@@ -320,8 +319,9 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="section-heading">
-                    <h2 id='option-question'>What is your experience level?</h2>
+                    <h2>GardenBox Decision Engine&trade;</h2>
                     <hr>
+                    <h2 id='option-question'>What is your experience level?</h2>
                 </div>
             </div>
         </div>
